// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CircleSkeleton /> should render a circle skeleton 1`] = `
<CircleSkeleton
  showSkeleton={true}
  size="large"
>
  <styled.span
    size="large"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "gbNEiX",
            "rules": Array [
              "
  border-radius: 50%;
  line-height: 1rem;

  ",
              [Function],
              "

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="large"
    >
      <span
        className="gbNEiX"
        size="large"
      />
    </StyledComponent>
  </styled.span>
</CircleSkeleton>
`;

exports[`<CircleSkeleton /> should render a circle skeleton with set size 1`] = `
<CircleSkeleton
  showSkeleton={true}
  size="small"
>
  <styled.span
    size="small"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "cJkKME",
            "rules": Array [
              "
  border-radius: 50%;
  line-height: 1rem;

  ",
              [Function],
              "

  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="small"
    >
      <span
        className="cJkKME"
        size="small"
      />
    </StyledComponent>
  </styled.span>
</CircleSkeleton>
`;
